added some innerhtml

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8">
     <link href="styles.css" rel="stylesheet" />
-    <title>JavaScript DOM Tutorials</title>
+    <title>The Reading Shelf</title>
   </head>
   <body>
   	<div id="wrapper">
 	    <header>
 	    	<div id="page-banner">
-	    		<h1 class="title">Bookorama</h1>
-          <p>Books for Ninjas</p>
+	    		<h1 class="title">The Reading Shelf</h1>
+          <p>Books for Nerds</p>
           <form id="search-books">
             <input type="text" placeholder="Search books..." />
           </form>
