just updated the descriptions a little

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	    	<div id="page-banner">
 	    		<h1 class="title">The Reading Shelf</h1>
 		  <p>Books for Nerds</p>
-		  <a href="https://github.com/ofaruk0169">Click Here</a>
+		 
           <form id="search-books">
             <input type="text" placeholder="Search books..." />
           </form>
@@ -50,12 +50,12 @@
 			  <li data-target="#contact">Contact</li>
 			</ul>
 			<div class="panel active" id="about">
-			  <p>Content for about tab...</p>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id nunc porta urna ornare rhoncus. Ut convallis ante at.</p>
+			  <p>What even is this</p>
+			  <p>This website is made for fun please do not take it seriously. I wanted to practice my DOM manipulation skills via this tabbed panel, the forms and buttons. It all worked as you can see</p>
 			</div>
 			<div class="panel" id="contact">
-			  <p>Content for contact tab...</p>
-			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id nunc porta urna ornare rhoncus. Ut convallis ante at.</p>
+			  <p>Check out my other cool projects on GitHub :) </p>
+			  <p> <a href="https://github.com/ofaruk0169">Click Here</a></p>
 			</div>
 		  </div>
 
