--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 	    	<h2 class="title">Books to Read</h2>
 	    	<ul>
 	    		<li>
-	    			<span class="name">Name of the Wind</span>
+	    			<span class="name">The Lord of The Rings</span>
 	    			<span class="delete">delete</span>
 	    		</li>
 	    		<li>
-	    			<span class="name">The Wise Man's Fear</span>
+	    			<span class="name">The Gods Themselves</span>
 	    			<span class="delete">delete</span>
 	    		</li>
 	    		<li>
-	    			<span class="name">Kafka on the Shore</span>
+	    			<span class="name">Thinking Fast and Slow</span>
 	    			<span class="delete">delete</span>
 	    		</li>
 	    		<li>
-	    			<span class="name">The Master and the Margarita</span>
+	    			<span class="name">Meditations</span>
 	    			<span class="delete">delete</span>
 	    		</li>
 	    	</ul>
